login and signin updated

--- a/first_web/accounts/templates/accounts/register.html
+++ b/first_web/accounts/templates/accounts/register.html
@@ -4,7 +4,8 @@
 {% load static %}
 <link rel= "stylesheet" href = "{% static 'signin.css' %}">
   <body>
-    <div>
+    <div style="display: flex;justify-content: center;align-items: center;height: 150vh;">
+      <div class="contain">
       <h1 style="border-bottom: 1px solid gray; padding-bottom: 1rem; width: 18.125rem;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;color: rgb(40, 153, 198); ">
         Sign In
       </h1>
@@ -23,6 +24,7 @@
         <input type="submit" value="Sign In" />
       </form>
       <p>have an account ? <a class="login-link" href="{% url 'accounts:login' %}">Login</a></p>
+    </div>
     </div>
   </body>
 {% endblock %}
