--- a/first_web/accounts/static/signin.css
+++ b/first_web/accounts/static/signin.css
@@ -1,22 +1,11 @@
 body {
-    width: 98%;
-    height: 160vh;
+    /* width: 100%; */
     background-repeat: no-repeat !important;
     background-attachment: fixed !important;
     background: rgb(2, 0, 36);
     background: linear-gradient(131deg, rgba(2, 0, 36, 1) 21%, rgba(6, 5, 85, 1) 41%, rgba(9, 9, 121, 1) 55%, rgba(7, 65, 158, 1) 74%, rgba(0, 212, 255, 1) 100%);
     font-family: sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
-.login-link {
-    text-decoration: none;
-    margin-top: 2rem;
-}
-
-
-
 
 input[type=text],
 input[type=password],
@@ -28,13 +17,13 @@ input[type=email] {
     padding: 20px 0px 15px 10px;
 }
 
-a {
+.login-link {
     text-decoration: none;
     font-weight: 900 !important;
     color: darkblue !important;
 }
 
-div {
+.contain {
     background-color: rgb(255, 255, 255);
     text-align: center;
     width: 25rem;
@@ -57,7 +46,7 @@ input[type=submit] {
     margin-top: 2rem;
 }
 
-span {
+ span {
     color: rgb(0, 89, 255);
 }
 
@@ -74,7 +63,7 @@ a:nth-of-type(1) {
 
 a:nth-of-type(2) {
     color: rgb(0, 89, 255);
-}
+} 
 
 input[type=submit]:hover {
     background: rgb(98, 180, 232);
