--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -1,24 +1,51 @@
-{% extends 'main.html' %}
-{% block title %}product{% endblock %}
-{% block body %}
-<body style = "background-color: white ;">    
-    <div style="font-family: sans-serif;
-        color: black;font-size: 2rem;display:flex;align-items: center;flex-direction: column;">         
-        <h1>product</h1>
-        {% for product in products %}
-            <a href="{% url 'home:detail' product.id %}" >
-            <h1 style="font-size: 1.5rem;" >{{product.name}}</h1>
-            <img style="width: 8rem;height: 8rem;" src="{{product.image.url}}" style="width =50px;height = 50px; ">
-            </a>
-            <br>
-            {% if product.discount %}
-                <h4 style="text-decoration:line-through">
-                {{product.unit_price}}</h4>
-                <h3>{{product.total_price}}</h3>
-            {% else %}
-                    <h3>{{product.total_price}}</h3>
-            {% endif %}
-        {% endfor %}
+{% extends 'main.html' %} {% block title %}product{% endblock %} {% block body%}
+<body style="background-color: white">
+  {% for data in category %}
+  <a href="{{data.get_absolute_url}}">{{data.name}}</a>
+  <div class="btn-group">
+    <button
+      type="button"
+      class="btn btn-danger dropdown-toggle"
+      data-toggle="dropdown"
+      aria-haspopup="true"
+      aria-expanded="false"
+    ></button>
+
+    <div class="dropdown-menu">
+      {% for info in data.sub.all %}<a href="{{info.get_absolute_url}}"
+        >{{info.name}}</a
+      >
+      {%endfor%}
     </div>
+  </div>
+  {% endfor %}
+  <div
+    style="
+      font-family: sans-serif;
+      color: black;
+      font-size: 2rem;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    "
+  >
+    <h1>product</h1>
+    {% for product in products %}
+    <a href="{{product.get_absolute_url}}">
+      <h1 style="font-size: 1.5rem">{{product.name}}</h1>
+      <img
+        style="width: 8rem; height: 8rem"
+        src="{{product.image.url}}"
+        style="width =50px;height = 50px; "
+      />
+    </a>
+    <br />
+    {% if product.discount %}
+    <h4 style="text-decoration: line-through">{{product.unit_price}}</h4>
+    <h3>{{product.total_price}}</h3>
+    {% else %}
+    <h3>{{product.total_price}}</h3>
+    {% endif %} {% endfor %}
+  </div>
 </body>
 {% endblock %}
