reply and comment_like

--- a/first_web/home/templates/detail.html
+++ b/first_web/home/templates/detail.html
@@ -59,22 +59,36 @@
 
 <hr />
 <br />
+
+{% if user.is_authenticated%}
+<form method="post" action="{% url 'home:product_comment' products.id %}">
+  {%csrf_token%} {{comment_form.as_p}}
+  <button type="submit">send comment</button>
+</form>
+{%endif%}
+<hr />
+<br />
+<hr />
+{%for com in comment %}
+<div class="p-2 m-2">
+  {% if user.is_authenticated %}
+  <a href="{% url 'home:comment_like' com.id %} " class ="like m-2 cursor">
+    <i class="fa fa-thumbs-o-up"><span>like</span>&nbsp &nbsp{{com.total_like_commet}}</i></a>
+    {% endif %}
+<form method="post" action="{%url 'home:product_reply' products.id com.id %}">
+  {%csrf_token%}
+  <textarea name = "comment"id = "comment" class ="form_control" rows = "4" placeholder="reply ..."
+            required oninvalid="setCustomValidty(لطفا فیلد را پر کنید)"></textarea>
+  <div class="mt_2"><button type="submit" class="btn btn_info"> send reply</button></div>
+{%for data in com.comment_reply.all %}
+<p> {{data.comment}}</p>{%endfor%}
+<p>{{com.comment}}</p>
+<small>{{com.rate}}</small></form>
+{%endfor%} {% endblock %}
+
 <h1>similar products</h1>
 {% for tag in similar %}
 <a href="{% url 'home:detail'  tag.id %}">
   <img src="{{tag.image.url}}" alt="" style="width: 50px; height: 50px" />
 </a>
 {% endfor %}
-<form method = "post" action = "{% url 'home:product_comment' products.id %}">
-  {%csrf_token%}
-  {{comment_form.as_p}}
-  <button type = "submit">send comment</button>
-</form>
-  <hr>
-  <br>
-  <hr>
-{%for com in comment %}
-  <p> {{com.comment}}</p>
-  <small>{{com.rate}}</small>
-{%endfor%}
-{% endblock %}
