--- a/first_web/home/templates/detail.html
+++ b/first_web/home/templates/detail.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %} {% block title %}detail{% endblock %} {% block body %}
 <h1>{{products.name}}</h1>
+<h4>rate:{{products.average}}</h4>
+<br />
 <img
   style="width: 8rem; height: 8rem"
   src="{{products.image.url}}"
@@ -8,7 +10,11 @@
 <p>{{products.information|safe}}</p>
 <div class="row">
   {% for img in image %}
-  <img src="{{img.image.url}}" alt="" style="height: 200px;  width: 200px;">{%endfor%}
+  <img
+    src="{{img.image.url}}"
+    alt=""
+    style="height: 200px; width: 200px"
+  />{%endfor%}
 </div>
 <small>like: {{products.total_like}}</small>
 <small>unlike: {{products.total_unlike}}</small>
@@ -43,7 +49,6 @@
 <h3>{{product.total_price}}</h3>
 {% endif %}
 <hr />
-
 
 {% if products.status == 'Size' %}
 <form action="" method="post">
