--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -26,6 +26,7 @@
           <a class="nav-link" href="{% url 'accounts:user_register' %}">sign in</a>
           {% endif %}
           <a class="nav-link" href="{% url 'accounts:profile' %}">profile</a>
+          <a class="nav-link" href="{% url 'cart:cart_detail' %}">cart</a>
         </div>
       </div>
     </div>
