--- a/first_web/home/static/detail.css
+++ b/first_web/home/static/detail.css
@@ -22,8 +22,7 @@ label :hover {
 }
 
 .rate:not(:checked)>input {
-    position: absolute;
-    top: -9999px;
+    display: none;
 }
 
 .rate:not(:checked)>label {
