--- a/first_web/order/templates/order/order.html
+++ b/first_web/order/templates/order/order.html
@@ -1,3 +1,11 @@
 {% extends 'main.html' %}{% block title %}order{% endblock %} {% block body %}
 <h1>order</h1>
+<div class="container">
+  <h2>total price : {{order.get_price}}</h2>
+  <form method = "post" action="{% url 'order:coupon' order.id %}">
+    {% csrf_token %}
+    {{ form_order}}
+    <button type="submit" class="btn btn-info">coupon</button>
+  </form>
+</div>
 {% endblock %}
