--- a/first_web/accounts/templates/accounts/login.html
+++ b/first_web/accounts/templates/accounts/login.html
@@ -18,6 +18,7 @@
                 <input type="submit" value="Login">
         </form>
         <a class="login-link" href="{% url 'accounts:user_register' %}">Create Account</a>
+        <a class="login-link" href="{% url 'accounts:reset' %}">Forgot password</a>
     </div>
 </div>
 </body>
