--- a/first_web/accounts/templates/accounts/profile.html
+++ b/first_web/accounts/templates/accounts/profile.html
@@ -2,6 +2,7 @@
 {% block title %}profile{% endblock %}
 {% block body %}
 <h1>profile</h1>
+<img src="{{profile.profile_image.url}}" style="width: 80px; height: 65px; border-radius: 100%;">
 <p>user name: {{profile.user.username}}</p>
 <p>first name: {{profile.user.first_name}}</p>
 <p>last name: {{profile.user.last_name}}</p>
