--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -45,6 +45,7 @@
             {% endif %}
             <a class="nav-link" href="{% url 'accounts:profile' %}">profile</a>
             <a class="nav-link" href="{% url 'cart:cart_detail' %}">cart</a>
+            <a class="nav-link" href="{% url 'home:contact' %}">contact us</a>
           </div>
         </div>
             
