--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -51,5 +51,19 @@
     <h3>{{product.total_price}}</h3>
     {% endif %} {% endfor %}
   </div>
+
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      {% if products.has_previous %}
+      <li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">{{products.previous_page_number}}</a></li>
+      {% endif %}
+      <li class="page-item {% if page_num == page_num %} active {% endif %}"><a class="page-link" href="?page={{products.number}}">{{products.number}}</a></li>
+      {% if products.has_next %}
+      <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">{{products.next_page_number}}</a></li>
+      <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">next</a></li>
+      {% endif %}
+    </ul>
+  </nav>
 </body>
 {% endblock %}
