--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -5,10 +5,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../static/main.css" />
     <title>{% block title %}home{% endblock %}</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <body
+    style="
+       background-repeat: no-repeat !important;
+      background-attachment: fixed !important;
+      background: #141e30;
+      /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #243b55, #141e30);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #243b55, #141e30);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+      /* background: rgb(2, 0, 36);
+  background: linear-gradient(131deg, rgba(2, 0, 36, 1) 21%, rgba(6, 5, 85, 1) 41%, rgba(9, 9, 121, 1) 55%, rgba(7, 65, 158, 1) 74%, rgba(0, 212, 255, 1) 100%); */
+      font-family: sans-serif; 
+      padding-top: 4rem;
+    "
+  >
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -24,30 +41,28 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a
-              class="nav-link active"
+              class="nav-link active text-light"
               aria-current="page"
               href="{% url 'home:home' %}"
               >Home</a
             >
             <a
-              class="nav-link active"
+              class="nav-link active text-light"
               aria-current="page"
               href="{% url 'home:product' %}"
               >product</a
             >
             {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'accounts:logout' %}">logout</a>
+            <a class="nav-link text-light" href="{% url 'accounts:logout' %}">logout</a>
+            <a class="nav-link text-light" href="{% url 'accounts:profile' %}">profile</a>
             {% else %}
-            <a class="nav-link" href="{% url 'accounts:login' %}">login</a>
-            <a class="nav-link" href="{% url 'accounts:user_register' %}"
-              >sign in</a
-            >
+            <a class="nav-link text-light" href="{% url 'accounts:login' %}">login</a>
+            <a class="nav-link text-light" href="{% url 'accounts:user_register' %}"
+            >sign in</a>
             {% endif %}
-            <a class="nav-link" href="{% url 'accounts:profile' %}">profile</a>
-            <a class="nav-link" href="{% url 'cart:cart_detail' %}">cart</a>
+            <a class="nav-link text-light" href="{% url 'cart:cart_detail' %}">cart</a>
           </div>
         </div>
-            
       </div>
     </nav>
     <body>
