--- a/first_web/home/static/product.css
+++ b/first_web/home/static/product.css
@@ -1,162 +1,107 @@
-.range-slider {
+.wrapper{
     position: relative;
-    width: 200px;
-    height: 35px;
-    text-align: center;
+    width: 15rem;
+    background-color: #ffffff;
+    padding: 50px 40px 20px 40px;
+    border-radius: 10px;
 }
-
-.range-slider input {
-    pointer-events: none;
-    position: absolute;
-    overflow: hidden;
-    left: 0;
-    top: 15px;
-    width: 200px;
+.containere{
+    position: relative;
+    width: 100%;
+    height: 100px;
+    margin-top: .2rem;
+}
+input[type="range"]{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
     outline: none;
-    height: 18px;
-    margin: 0;
-    padding: 0;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    background-color: transparent;
+    pointer-events: none;
 }
-
-.range-slider input::-webkit-slider-thumb {
-    pointer-events: all;
-    position: relative;
-    z-index: 1;
-    outline: 0;
+.slider-track{
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    margin: auto;
+    top: 0px;
+    bottom: 0;
+    border-radius: 5px;
 }
-
-.range-slider input::-moz-range-thumb {
-    pointer-events: all;
-    position: relative;
-    z-index: 10;
+input[type="range"]::-webkit-slider-runnable-track{
+    -webkit-appearance: none;
+    height: 5px;
+}
+input[type="range"]::-moz-range-track{
     -moz-appearance: none;
-    width: 9px;
+    height: 5px;
 }
-
-.range-slider input::-moz-range-track {
+input[type="range"]::-ms-track{
+    appearance: none;
+    height: 5px;
+}
+input[type="range"]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    background-color: #3264fe;
+    cursor: pointer;
+    margin-top: -9px;
+    pointer-events: auto;
+    border-radius: 50%;
+}
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #3264fe;
+    pointer-events: auto;
+}
+input[type="range"]::-ms-thumb{
+    appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #3264fe;
+    pointer-events: auto;
+}
+input[type="range"]:active::-webkit-slider-thumb{
+    background-color: #ffffff;
+    border: 3px solid #3264fe;
+}
+.values{
+    background-color: #3264fe;
+    width: 10rem;
     position: relative;
-    z-index: -1;
-    background-color: rgba(0, 0, 0, 1);
-    border: 0;
+    /* margin: auto; */
+    padding: 10px 0;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1rem;
+    color: #ffffff;
 }
-
-.range-slider input:last-of-type::-moz-range-track {
-    -moz-appearance: none;
-    background: none transparent;
-    border: 0;
+.values:before{
+    content: "";
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-top: 15px solid #3264fe;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    margin: auto;
+    bottom: -14px;
+    left: 0;
+    right: 0;
 }
-
-.range-slider input[type=range]::-moz-focus-outer {
-  border: 0;
-}
-
-.rangeValue {
-	width: 30px;
-}
-
-.output {
-  position: absolute;
-  border:1px solid #999;
-  width: 40px;
-  height: 30px;
-  text-align: center;
-  color: #999;
-  border-radius: 4px;
-  display: inline-block;
-  font: bold 15px/30px Helvetica, Arial;
-  bottom: 75%;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
-
-.output.outputTwo {
-	left: 100%;
-}
-
-.container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-input[type=range] {
-  -webkit-appearance: none;
-  background: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-  height: 5px;
-  border: none;
-  border-radius: 3px;
-  background: transparent;
-}
-
-input[type=range]::-ms-track {
-  height: 5px;
-  background: transparent;
-  border: none;
-  border-radius: 3px;
-}
-
-input[type=range]::-moz-range-track {
-  height: 5px;
-  background: transparent;
-  border: none;
-  border-radius: 3px;
-}
-
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: #555;
-  margin-top: -5px;
-  position: relative;
-  z-index: 10000;
-}
-
-input[type=range]::-ms-thumb {
-  -webkit-appearance: none;
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: #555;
-  margin-top: -5px;
-  position: relative;
-  z-index: 10000;
-}
-
-input[type=range]::-moz-range-thumb {
-  -webkit-appearance: none;
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: #555;
-  margin-top: -5px;
-  position: relative;
-  z-index: 10000;
-}
-
-input[type=range]:focus {
-  outline: none;
-}
-
-.full-range,
-.incl-range {
-	width: 100%;
-	height: 5px;
-	left: 0;
-	top: 21px;
-	position: absolute;
-	background: #DDD;
-}
-
-.incl-range {
-	background: gold;
+#id_brand,#id_color,#id_size{
+    margin-left: 1rem;
 }
