--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -3,6 +3,7 @@
   <head>
     {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
     <meta charset="UTF-8" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer ></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}home{% endblock %}</title>
@@ -77,6 +78,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    {% block scripts %}{% endblock %}
     {% include 'message.html' %}
   </body>
 </html>
