--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -8,16 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}home{% endblock %}</title>
   </head>
-  <body
-    style="
-      background-repeat: no-repeat !important;
-      background-attachment: fixed !important;
-      background: #141e30;
-      background: -webkit-linear-gradient(to right, #243b55, #141e30);
-      background: linear-gradient(to right, #243b55, #141e30);
-      font-family: sans-serif;
-    "
-  >
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <div class="container-fluid">
         <button
